examples/bad/break-outside-loop.elina
fn main(): void {
  while (true) {
    fn f(): void {
      break;
    }
  }
}